--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,21 @@
 .is-hovering .animate-scroll{
     animation-play-state: paused;
 }
+
+.arrow {
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 7px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.down {
+  border-color: white;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
